# halide-experiments

./: CMakeLists.txt  README.md  images.cpp  main.cpp  nonlocalmeans.py  pixel_differences.cpp
include/: ColorToGrayConverter.h  HalidePipeline.h  gpu.h  imaging.h  nonlocal_means_filter.h  target.h
include/pipelines/: ColorToGrayConverter.h  NonlocalMeansFilter.h
src/: ColorToGrayConverter.cpp  gpu.cpp  imaging.cpp  nonlocal_means_filter.cpp  nonlocalmeans.py  target.cpp
src/pipelines/: ColorToGrayConverter.cpp  NonlocalMeansFilter.cpp
